--- a/bib/pubs_patent.bib
+++ b/bib/pubs_patent.bib
@@ -13,3 +13,11 @@
   month = 11,
   journal = {中国专利},
 }
+
+@article{shen2018_patent2,
+  author = 	 {沈志宏 and 赵子豪 and 周园春 and 杜一},
+  title = 	 {一种融合图数据库和人工智能算法的数据管理系统},
+  year = 	 2018,
+  month = 11,
+  journal = {中国专利},
+}
