add new project and paper

--- a/bib/pubs_conference.bib
+++ b/bib/pubs_conference.bib
@@ -1,3 +1,13 @@
+@inproceedings{wang2018you,
+	title={You Are How You Drive: Peer and Temporal-Aware Representation Learning for Driving Behavior Analysis},
+	author={Pengyang Wang and Yanjie Fu and Jiawei Zhang and Pengfei Wang and Yu Zheng and Charu C. Aggarwal},
+	booktitle={Proceedings of the 24th ACM SIGKDD International Conference on Knowledge Discovery & Data Mining (KDD 2018)},
+	pages="2457--2466",
+  year= 2018,
+  organization={ACM},
+  month = 1
+}
+
 @inproceedings{wang2018approximations,
   title={Approximations and Bounds for (n, k) Fork-Join Queues: A Linear Transformation Approach},
   author={Wang, Huajin and Li, Jianhui and Shen, Zhihong and Zhou, Yuanchun},
