--- a/bib/pubs_journal.bib
+++ b/bib/pubs_journal.bib
@@ -1,4 +1,3 @@
-
 @article{du2018correlation,
 	title= {A Correlation Visual Analytics System for Air Quality},
 	author={Yi Du and Malik Abish and Lianke Zhou and Yuanchun Zhou},
@@ -35,6 +34,17 @@
     url = {http://engine.scichina.com/publisher/scp/journal/SSI/48/4/10.1360/N112017-00221?slug=fulltext}
 }
 
+@article{wang2017spotting,
+	title={Spotting Trip Purposes from Taxi Trajectories: A General Probabilistic Model},
+	author={Pengfei Wang and Guannan Liu and Yanjie Fu and Yuanchun Zhou and Jianhui Li},
+	journal="ACM Transactions on Intelligent Systems and Technology",
+	volume=9,
+	number=3,
+	pages=29,
+	year=2017,
+  month = 1
+}
+
 @article{shen2017bigdata,
 	title= {科学大数据管理：概念、技术与系统},
 	author={黎建辉 and 沈志宏 and 孟小峰},
@@ -43,8 +53,8 @@
 	number= 2,
 	pages= {235--247},
 	year= 2017,
-    month = 2,
-    url = {https://bluejoe2008.github.io/pub/Scientific_Big_Data_Management_Concepts,_Technologies_and_System.pdf}
+  month = 2,
+  url = {https://bluejoe2008.github.io/pub/Scientific_Big_Data_Management_Concepts,_Technologies_and_System.pdf}
 }
 
 @article{du2018banded,
