--- a/bib/pubs_journal.bib
+++ b/bib/pubs_journal.bib
@@ -1,3 +1,15 @@
+@article{zhao2019airpollution,
+	title= {Spatiotemporal Trend Analysis of PM2.5 Concentration in China, 1999–2016},
+	author={Jianghua Zhao and Xuezhi Wang and Hongqing Song and Yi Du and Wenjuan Cui and Yuanchun Zhou},
+	journal="Atmosphere",
+	volume= 10,
+	number= 8,
+	pages= {1--10},
+	year= 2019,
+  month = 8,
+  url = {https://www.mdpi.com/2073-4433/10/8/461}
+}
+
 @article{du2018correlation,
 	title= {A Correlation Visual Analytics System for Air Quality},
 	author={Yi Du and Malik Abish and Lianke Zhou and Yuanchun Zhou},
