add new patents

--- a/bib/pubs_patent.bib
+++ b/bib/pubs_patent.bib
@@ -1,3 +1,11 @@
+
+@article{du2019_patent,
+  author = 	 {杜一 and 乔子越 and 周园春},
+  title = 	 {一种基于异质图卷积神经网络嵌入的作者名字消歧方法},
+  year = 	 2019,
+  month = 11,
+  journal = {中国专利},
+}
 @article{du2018_patent,
   author = 	 {杜一 and 乔子越 and 周园春},
   title = 	 {一种基于异质网络嵌入的学者名字消岐方法},
